# condo-adapter

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.py
condo/: __init__.py  adapter_gaussian_ot.py  adapter_mmd.py  adapter_wd.py  cat_kernels.py  condo.py  condo_adapter.py  condo_adapter_kld.py  condo_adapter_mmd.py  condo_adapter_wd.py  heteroscedastic_kernel.py  kernels.py  linear_adapter.py  mmd_adapter.py  ot.py  product_prior.py  sequence_kernel.py  utils.py
examples/: categorical2d-example.ipynb  condo-categorical-confounder.ipynb  condo-continuous-confounder.ipynb  plot_otda_linear_mapping.ipynb  readme-example.ipynb  requirements.txt
experiments/: continuous-1d.ipynb
paper/: SNAREseq-plot.ipynb  SNAREseq.ipynb  ansur-affine-gender-rmse.txt  ansur-affinenofeatureshift-gender-rmse.txt  ansur-affinenofeatureshiftnotargetshift-gender-rmse.txt  ansur-affinenotargetshift-gender-rmse.txt  ansur-location-scale-gender-rmse.txt  ansur-location-scalenofeatureshift-gender-rmse.txt  ansur-location-scalenofeatureshiftnotargetshift-gender-rmse.txt  ansur-location-scalenotargetshift-gender-rmse.txt  ansur-tabpfn-gender.ipynb  bladderbatch-confounded.ipynb  bladderbatch-prep.ipynb  bladderbatch.ipynb  ca-housing-cleanup.ipynb  ca-housing.ipynb  categorical1d.ipynb  categorical2d.ipynb  combat.py  continuous1d-dummy-confounders.ipynb  continuous1d-mmd-dynamic.ipynb  continuous1d-split-confounders.ipynb  continuous1d-table2plot.ipynb  continuous1d.ipynb  image-color-adaptation.ipynb  mmd-dynamic.ipynb  rMSEs-continuous1d-after-4.pickle
(+12 files in other folders)
